--- a/style.css
+++ b/style.css
@@ -72,6 +72,12 @@ body {
   transform-origin: top left;
 }
 
+/* Shows nav when button is clicked */
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 0.3s;
+}
+
 nav {
   position: fixed;
   bottom: 40px;
