bug: fixed error where close button was not in view

--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
   transition: transform 0.5s linear;
 }
 
+/* Rotates circle to bring close button into view */
+.container.show-nav .circle {
+  transform: rotate(-70deg);
+}
+
 .circle button {
   cursor: pointer;
   position: absolute;
